# jacson

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  README.txt  shell.nix
include/jacson/: jacson.h  jtypes.h
src/: jacson.c  jacson.h  jvalue.c  jvalue.h  lexer.c  lexer.h  log.h  mem.h  parser.c  parser.h  query.c  query.h  str.c  str.h  types.h  validator.c  validator.h
test/: test.c
